Add profile pages controller, configure route profile page route

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,6 +10,6 @@
   %body
     %header
       = render 'layouts/navigation'
-    %main{:role => "main"}
+    .container
       = render 'layouts/messages'
       = yield
