--- a/app/views/profile_pages/show.html.haml
+++ b/app/views/profile_pages/show.html.haml
@@ -1,6 +1,9 @@
 .container
   .col-md-12
-    .col-md-4.col-md-offset-1
-      %h2 Welcome
-      %h2= profile.name
-      %p= profile.email
+    #profile_acc.col-md-4.col-md-offset-1
+      %img= image_tag avatar_url(profile)
+      %h2.name= profile.name
+      %p.mail= mail_to profile.email
+      %p.join_date
+        Date joined
+        = profile.created_at.strftime("%d-%m-%Y")
