Add profile link to navbar

--- a/app/views/profile_pages/show.html.haml
+++ b/app/views/profile_pages/show.html.haml
@@ -7,3 +7,7 @@
       %p.join_date
         Date joined
         = profile.created_at.strftime("%d-%m-%Y")
+
+    .col-md-6
+      - profile.galleries.each do |gallery|
+        %p= gallery
