--- a/app/views/layouts/_navigation_links.html.haml
+++ b/app/views/layouts/_navigation_links.html.haml
@@ -1,5 +1,6 @@
 %li= text_field_tag :search
 - if user_signed_in?
+  %li= link_to current_user.name, show_profile_path(current_user)
   %li= link_to 'Edit account', edit_user_registration_path
   %li= link_to 'Sign out', destroy_user_session_path, :method=>'delete'
 - else
