fix gallery controller variable names and flow

--- a/app/views/galleries/edit.html.haml
+++ b/app/views/galleries/edit.html.haml
@@ -2,6 +2,6 @@
 
 = render 'form'
 
-= link_to 'Show', user_gallery_path(@gallery)
+= link_to 'Show', user_gallery_path(gallery)
 \|
 = link_to 'Back', user_galleries_path
