--- a/app/views/galleries/_form.html.haml
+++ b/app/views/galleries/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for [@gallery.user, @gallery] do |g|
+= simple_form_for [gallery.user, gallery] do |g|
   = g.error_notification
 
   .form-inputs
