Decorate profile page, add decent_decoration gem, refactor profile page code

--- a/app/views/profile_pages/show.html.haml
+++ b/app/views/profile_pages/show.html.haml
@@ -6,4 +6,4 @@
       %p.mail= mail_to profile.email
       %p.join_date
         Date joined
-        = profile.created_at.strftime("%d-%m-%Y")
+        = profile.joined
