--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,9 +1,7 @@
 .container
-  %h1.center Welcome
   %section
     .col-md-2
       Tags
     .col-md-10
       - images.each do |i|
-        .home-images-index
-          = image_tag i.picture.url(:thumb), class: 'homepage-image'
+        = link_to image_tag(i.picture.url(:medium), class: 'homepage-image'), gallery_image_path(i.gallery, i)
