Update seeds with tags, reconfigure acts_as_taggable_on

--- a/app/views/galleries/show.html.haml
+++ b/app/views/galleries/show.html.haml
@@ -5,6 +5,6 @@
   Gallery:
   = gallery.title
 
-= link_to 'Edit', edit_user_gallery_path(gallery.user, gallery)
+= link_to 'Edit', edit_gallery_path(gallery)
 \|
-= link_to 'Back', user_galleries_path(gallery.user, gallery)
+= link_to 'Back', gallery_path(gallery)
