--- a/app/views/layouts/_navigation_links.html.haml
+++ b/app/views/layouts/_navigation_links.html.haml
@@ -1,4 +1,8 @@
-%li= text_field_tag :search
+%li
+  =form_tag(root_path, method: "get") do
+    =label_tag(:search, "Search for:")
+    =text_field_tag :search, params[:search]
+    =submit_tag "Search"
 - if user_signed_in?
   %li= link_to current_user.name, show_profile_path(current_user)
   %li= link_to 'Edit account', edit_user_registration_path
