--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,6 +16,24 @@
 
 @import 'bootstrap';
 
+/* Global Body */
+body {
+font-family: "Lato", sans-serif;
+font-weight: 100;
+}
+h1, h2, h3, h4, h5, h6 {
+font-weight: 100;
+}
 .center {
-  text-align: center;
+text-align: center;
+}
+
+/* Home Page */
+
+#images {
+  .image {
+    display: inline-block;
+    font-size: 1.25rem;
+    max-width: 90%;
+  }
 }
