--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,10 +1,17 @@
 .container
+  .col-md-12
+    .col-md-6.col-md-offset-3
+      .jumbotron.center
+        %p.title Python-no-thanks
   %section
-    .col-md-2
+    #tags.col-md-2
       %h4 Popular tags
       %ul
         - ActsAsTaggableOn::Tag.most_used(3).each do |t|
           %li.tags= link_to t.name, root_path(tag: t.name)
-    .col-md-10
+    #images.col-md-10
       - images.each do |i|
-        = link_to image_tag(i.picture.url(:medium), class: 'homepage-image'), gallery_image_path(i.gallery, i)
+        .image.col-md-3
+          = link_to image_tag(i.picture.url(:medium), class: 'homepage-image'), gallery_image_path(i.gallery, i)
+          %p.title= i.title
+          %span.likes= pluralize(i.get_upvotes.size, "Like")
