Further css update

--- a/app/assets/stylesheets/image.css.scss
+++ b/app/assets/stylesheets/image.css.scss
@@ -1,3 +1,9 @@
 .image-info {
   display: inline
 }
+
+.image-info-table-row {
+  display: block;
+  border-bottom: 1px solid rgba(227,230,232,0.9);
+  margin: 10px 0 10px 0;
+}
