Commit for synchronizing project

--- a/app/views/layouts/_navigation_links.html.haml
+++ b/app/views/layouts/_navigation_links.html.haml
@@ -1,4 +1,6 @@
 %li
+  =link_to "Upload image", new_image_path
+%li
   =form_tag(root_path, method: "get") do
     =text_field_tag :search, params[:search], placeholder: "Search", class: 'form-control searchbox'
 - if user_signed_in?
