Add tags to image view, rework css

--- a/app/views/images/_form.html.haml
+++ b/app/views/images/_form.html.haml
@@ -5,6 +5,7 @@
     = f.association :gallery
     = f.input :title
     = f.input :description
+    = f.input :tags
     = f.input :picture, as: :file
 
   .form-actions
