Add link to create gallery

--- a/app/views/layouts/_navigation_links.html.haml
+++ b/app/views/layouts/_navigation_links.html.haml
@@ -1,4 +1,6 @@
 %li
+  =link_to "Create gallery", new_gallery_path
+%li
   =link_to "Upload image", new_image_path
 %li
   =form_tag(root_path, method: "get") do
